[project]
name = "itk-tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "django>=5.2.6",
    "gunicorn>=23.0.0",
    "requests>=2.32.5",
    "ruff>=0.12.11",
    "tabulate>=0.9.0",
    "uvicorn>=0.35.0",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
